fix sun emoticon line overflow

--- a/src/pages/aboutme/aboutpage.css
+++ b/src/pages/aboutme/aboutpage.css
@@ -120,6 +120,9 @@ a {
   font-size: 1.6rem;
 }
 
+.no-break {
+  white-space: nowrap;
+}
 
 /* Responsivity */
 
